--- a/src/Components/Style/CartContent.css
+++ b/src/Components/Style/CartContent.css
@@ -34,7 +34,7 @@
     color: #fff;
     border: none;
     border-radius: 5px;
-    padding: 10px 20px;
+    /* padding: 10px 20px; */
     cursor: pointer;
   }
   
