--- a/src/Components/Style/ItemListContainer.css
+++ b/src/Components/Style/ItemListContainer.css
@@ -1,14 +1,3 @@
-.ItemList {
-    color: #9bcb20;
+.ItemListContainer {
+    margin-top: 100px;
 }
-.ItemList {
-    background-color:#1F2023;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 15px 50px rgba(0, 0, 0, 0.483);
-  }
