--- a/src/Components/Style/ItemDetail.css
+++ b/src/Components/Style/ItemDetail.css
@@ -56,3 +56,19 @@
     background-color: #282C34;
     color: #9bcb20;
   }
+  .Option2 {
+    background-color:  #9bcb20;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0 20%;
+    margin-bottom: 80px;
+    padding: 10px 20px;
+    width: 150px;
+  }
+  .Option2:hover {
+    background-color: #ffffff;
+    color: #9bcb20;
+  }
